--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>RickRoll</title>
 </head>
 
-<body onload="audio.play()">
-    <img src="/img/rickroll-roll.gif" alt="RickRoll" class="RickRollIMG">
+<body onmouseover="audio.play()">
+    <img src=".../img/rickroll-roll.gif" alt="RickRoll" class="RickRollIMG">
     <h1>YOU'VE BEEN RICKROLLED </h1>
     <div class="links">
         <a href="Link-Ziel"><b>Wikipedia</b></a>
