--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 </head>
 
 <body onmouseover="audio.play()">
-    <img src=".../img/rickroll-roll.gif" alt="RickRoll" class="RickRollIMG">
+    <img src="img/rickroll-roll.gif" alt="RickRoll" class="RickRollIMG">
     <h1>YOU'VE BEEN RICKROLLED </h1>
     <div class="links">
         <a href="Link-Ziel"><b>Wikipedia</b></a>
-        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw"
-            class="twitter-share-button" data-text="RickRoll your friends at:" data-via="TizianSch"
-            data-hashtags="rickroll" data-show-count="false"><b>Tweet</b>
-        </a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
+            data-text="RickRoll your friends at:" data-via="TizianSch" data-hashtags="rickroll"
+            data-show-count="false"><b>Tweet</b>
+        </a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <a href="Link-Ziel"><b>GitHub</b></a>
     </div>
 </body>
